fix hover-to-play emoji clipping

--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -556,6 +556,8 @@
         height: 22px;
       }
 
+      .hoverplay:hover { padding-left: 22px }
+
       h1 {
         font-size: 16px;
         line-height: 24px;
