--- a/app/javascript/flavours/glitch/styles/components/composer.scss
+++ b/app/javascript/flavours/glitch/styles/components/composer.scss
@@ -212,6 +212,8 @@
     height: 20px;
     margin: -5px 0 0;
   }
+
+  .hoverplay:hover { padding-left: 20px }
 }
 
 .emoji-picker-dropdown {
