--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -22,6 +22,8 @@
     margin: -3px 0 0;
   }
 
+  .hoverplay:hover { padding-left: 20px }
+
   p, pre, blockquote {
     margin-bottom: 20px;
     white-space: pre-wrap;
@@ -545,6 +547,8 @@
       height: 24px;
       margin: -1px 0 0;
     }
+
+    .hoverplay:hover { padding-left: 24px }
   }
 
   .video-player {
